Fixed layout issue

--- a/static/django_press_gallery/css/main.styl
+++ b/static/django_press_gallery/css/main.styl
@@ -47,6 +47,9 @@ header
         margin-top 2px
 
 
+.content
+    margin-bottom 50px
+
 .active
     color #888
 
